--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <!-- 이미지 컨테이너 -->
     <div class="container">
-        <img src="muscle.jpg" alt="muscle" class="muscle-image">
+        <img src="https://maximumjw.github.io/muscle-consultant/muscle.jpg" alt="muscle" class="muscle-image">
 
         <!-- 핫스팟 추가 -->
         <div class="hotspot shoulder" data-title="어깨" data-info="밀리터리 프레스나 측면 레이즈를 추천합니다." style="top: 19.7%; left: 37.6%;"></div>
